[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "node-x"
version = "1.0.0"
description = "Composable graph object model — serialisable, streamable, thread-safe — zero core dependencies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tim Hosking", email = "munger@mungerware.com"}
]
keywords = ["node", "graph", "tree", "serialisable", "streaming", "thread-safe", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Munger/node-x"

[tool.setuptools]
packages = ["node_x"]

[project.optional-dependencies]
yaml   = ["pyyaml>=6.0"]
sqlite = []
